    * added LZ4/LZ4HC: compression library, http://www.lz4.org (BSD 2),
        v1.9.3, Copyright (c) 2011-2016, Yann Collet, All Rights Reserved.
    * mis and pagerank demos: removed; mis added to LAGraph/experimental
    * disabled free memory pool if OpenMP not available
    * (34) bug fix: C<M>=Z not returning C as iso if Z iso and C initialy
        empty.  Caught by Erik Welch, Anaconda.

Version 5.1.10, Oct 27, 2021

    * (35) bug fix: GB_selector; A->plen and C->plen not updated correctly.
        Caught by Jeffry Lovitz, Redis.

Version 5.1.9, Oct 26, 2021

    * (33) bug fix: in-place test incorrect for C+=A'*B using dot4
    * (32) bug fix: disable free pool if OpenMP not available

Version 5.1.8, Oct 5, 2021

    * (31) bug fix: C=A*B when A is sparse and B is iso and bitmap.
        Caught by Mark Blanco, CMU.

Version 5.1.7, Aug 23, 2021

    * (30) bug fix:  GrB_apply, when done in-place and matrix starts
        non-iso and becomes iso, gave the wrong iso result.
        Caught by Fabian Murariu.

Version 5.1.6, Aug 16, 2021

    * one-line change to C=A*B: faster symbolic analysis when a vector
        C(:,j) is dense (for CSC) or C(i,:) for CSR.
    * port to MacOSx 11.3.1 (Big Sur): cmake 3.13 or later now required.

Version 5.1.5, July 15, 2021

    * ACM TOMS submission: rename some functions to simplify discussion
        in ACM TOMS article

Version 5.1.4, July 6, 2021

    * faster Octave interface, and a bug fix for 1-based printing

Version 5.1.3, July 3, 2021

    * added GxB_Matrix_iso and GxB_Vector_iso: to query if a matrix or vector
        is held as iso-valued.
    * (29) bug fix: Matrix_pack_*R into a matrix previously held by
        column, or pack*C into a matrix by row, would flip the dimensions.
        Caught by Erik Welch, Anaconda.

Version 5.1.2, June 30, 2021

    * (28) bug fix: kron(A,B) with iso input matrices A and B fixed.
        Caught by Michel Pelletier, Graphegon.

Version 5.1.1, June 29, 2021
