@@ -1,5 +1,5 @@
 % version of SuiteSparse:GraphBLAS
 \date{VERSION
 6.0.0,
-Oct 28, 2021 (alpha17)}
+Oct 29, 2021 (alpha17)}
 
