@@ -8,7 +8,7 @@
 //------------------------------------------------------------------------------
 
 // for code development only:
-#define GB_DEVELOPER 1
+// #define GB_DEVELOPER 1
 
 #include "GB_Pending.h"
 #include "GB.h"
